# l5r-ai

./: .gdb_history  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  TODO
cards/: CMakeLists.txt
cards/data/: gossip.json  mirumoto-hitomi.json  the-fires-of-justice.json
cards/include/: card.h  carddata.h  carddatagenerator.h  cardgenerator.h  cards.h
cards/src/: card.cpp  carddata.cpp  carddatagenerator.cpp  cardgenerator.cpp
cards/test/: carddatageneratortest.cpp  carddatageneratortest.h  main.cpp
decks/: CMakeLists.txt
decks/data/: cranedeck  liondeck
decks/include/: decklist.h  decklistmanager.h  decklistvalidator.h  starterdecklists.h
decks/src/: decklist.cpp  decklistmanager.cpp  decklistvalidator.cpp  starterdecklists.cpp
decks/test/: decklistmanagertest.cpp  decklistvalidatortest.cpp  main.cpp
docs/: annotated.html  card_8h_source.html  carddata_8h_source.html  cards_8h_source.html  classl5r_1_1CardData-members.html  classl5r_1_1CardData.html  classl5r_1_1CardData_1_1builder-members.html  classl5r_1_1card-members.html  classl5r_1_1card_1_1builder-members.html  dir_10a2a7a1281f4c4cdb2c288490064898.html  dir_4ede3bb414071aa76c9f8264ce8b8dde.html  files.html  functions.html  graph_legend.html  index.html
docs/html/: annotated.html  annotated_dup.js  card_8h_source.html  carddata_8h_source.html  cardgenerator_8h_source.html  cards_8h_source.html  classes.html  classl5r_1_1CardData-members.html  classl5r_1_1CardData.html  classl5r_1_1CardData.js  classl5r_1_1CardData_1_1builder-members.html  classl5r_1_1CardData_1_1builder.html  classl5r_1_1CardData_1_1builder.js  classl5r_1_1card-members.html  classl5r_1_1card.html  classl5r_1_1card.js  classl5r_1_1card_1_1builder-members.html  classl5r_1_1card_1_1builder.html  classl5r_1_1card_1_1builder.js  classl5r_1_1cardgenerator-members.html  classl5r_1_1cardgenerator.html  classl5r_1_1cardgenerator.js  dir_10a2a7a1281f4c4cdb2c288490064898.html  dir_10a2a7a1281f4c4cdb2c288490064898.js  dir_2086db107a533218df8cb42b11d9db01.html  files.html  (+12 more)
engine/: CMakeLists.txt
engine/include/: action.h  actiongenerator.h  agent.h  agentmanager.h  cardareamanager.h  carddatamanager.h  charactermanipulator.h  choice.h  conflictcardmanager.h  conflictengine.h  conflictmanager.h  conflictphasemanager.h  conflictresolutionmanager.h  cpuagent.h  decision.h  drawengine.h  dynastycardmanager.h  dynastyengine.h  endgame.h  engine.h  engineshared.h  gamestate.h  gamestateintfc.h  humanagent.h  imperialfavormanager.h  mulliganmanager.h  phasemanager.h  pregameengine.h  provincecardmanager.h  ringmanager.h  tokenmanager.h  turnmanager.h
engine/include/state/: cardarea.h  character.h  conflict.h  gamestate.h  phase.h  player.h  province.h  ring.h  tokens.h
engine/sim/: main.cpp
engine/src/: agent.cpp  agentmanager.cpp  cardareamanager.cpp  carddatamanager.cpp  charactermanipulator.cpp  choice.cpp  conflictcardmanager.cpp  conflictengine.cpp  conflictmanager.cpp  conflictphasemanager.cpp  conflictresolutionmanager.cpp  cpuagent.cpp  decision.cpp  drawengine.cpp  dynastycardmanager.cpp  dynastyengine.cpp  endgame.cpp  engine.cpp  engineshared.cpp  gamestate.cpp  gamestateintfc.cpp  humanagent.cpp  imperialfavormanager.cpp  mulliganmanager.cpp  phasemanager.cpp  pregameengine.cpp  provincecardmanager.cpp  ringmanager.cpp  tokenmanager.cpp  turnmanager.cpp
engine/src/state/: cardarea.cpp  character.cpp  conflict.cpp  gamestate.cpp  player.cpp  province.cpp  ring.cpp  tokens.cpp
engine/test/: biddingtest.cpp  biddingtest.h  choicesimulation.cpp  choicesimulation.h  conflicttest.cpp  conflicttest.h  deckreshuffle.cpp  deckreshuffle.h  dynastytest.cpp  dynastytest.h  gamestatetest.cpp  gamestatetest.h  main.cpp  pregametest.cpp  pregametest.h  regrouptest.cpp  regrouptest.h
mcts/: CMakeLists.txt
mcts/include/: gameplaytrainer.h  gamestatemapper.h  mctsactionbuilder.h  mctsactionnode.h  mctsguide.h  mctsselfplay.h  mctsstatebuilder.h  mctsstatenode.h  mctstree.h  mctstreeguide.h  mostvisitedguide.h  policymapper.h  uctguide.h
mcts/src/: gameplaytrainer.cpp  main.cpp  mctsactionbuilder.cpp  mctsactionnode.cpp  mctsguide.cpp  mctsselfplay.cpp  mctsstatebuilder.cpp  mctsstatenode.cpp  mctstree.cpp  mctstreeguide.cpp  mostvisitedguide.cpp  policymapper.cpp  uctguide.cpp
mcts/test/: actionbuildertest.cpp  actionbuildertest.h  main.cpp  statebuildertest.cpp  statebuildertest.h
nnet/: CMakeLists.txt
nnet/include/: charactercardslot.h  characterslot.h  gamegraph.h  gamesession.h  gamestatebuilder.h  gamestateencoder.h  gamestateinput.h  globalslot.h  holdingslot.h  playerslot.h  policybuilder.h  policyencoder.h  provinceslot.h  ringslot.h
nnet/src/: charactercardslot.cpp  gamegraph.cpp  gamesession.cpp  gamestatebuilder.cpp  gamestateencoder.cpp  main.cpp  policybuilder.cpp  policyencoder.cpp
nnet/test/: characterslottest.cpp  characterslottest.h  gamestatebuildertest.cpp  gamestatebuildertest.h  policybuildertest.cpp  policybuildertest.h  policyencodertest.cpp  policyencodertest.h
tf/: CMakeLists.txt
tf/include/: addop.h  applygradientdescent.h  assignop.h  biasadd.h  booltensor.h  constop.h  denselayer.h  doubletensor.h  floattensor.h  gradients.h  inputlayer.h  int32tensor.h  layer.h  layerinitializer.h  matmulop.h  mean.h  parameterizedtruncatednormal.h  placeholder.h  relu.h  restoreop.h  saveop.h  sgdoptimizer.h  sigmoid.h  squareddifference.h  stringtensor.h  tensor.h  tfgraph.h  tfoperation.h  tfsession.h  truncatednormalop.h  variable.h  variableread.h  zeroslike.h
tf/src/: addop.cpp  applygradientdescent.cpp  assignop.cpp  biasadd.cpp  booltensor.cpp  constop.cpp  denselayer.cpp  doubletensor.cpp  floattensor.cpp  gradients.cpp  inputlayer.cpp  int32tensor.cpp  layer.cpp  layerinitializer.cpp  main.cpp  matmulop.cpp  mean.cpp  parameterizedtruncatednormal.cpp  placeholder.cpp  relu.cpp  restoreop.cpp  saveop.cpp  sgdoptimizer.cpp  sigmoid.cpp  squareddifference.cpp  stringtensor.cpp  tensor.cpp  tfgraph.cpp  tfoperation.cpp  tfsession.cpp  truncatednormalop.cpp  variable.cpp  variableread.cpp  zeroslike.cpp
(+30 files in other folders)
